# kento-cli

./: CHANGELOG.md  Makefile  PLAN2-TESTS-TODO.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/kento_cli/: __init__.py  __main__.py  _projection.py  cli.py
tests/: test_cli.py  test_cli_adopt.py  test_cli_attach.py  test_cli_block21.py  test_cli_create_passthrough.py  test_cli_emit_result.py  test_cli_error_handling.py  test_cli_exec.py  test_cli_images_dispatch.py  test_cli_info.py  test_cli_info_dispatch.py  test_cli_list_dispatch.py  test_cli_logging.py  test_cli_logs.py  test_cli_prune_orphans.py  test_cli_smoke.py  test_cli_validate_name.py  test_diagnose_cli.py  test_input_validators.py  test_projection_golden.py
