[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kento"
version = "1.6.0+unstable.1"
description = "Compose OCI container images into LXC system containers via overlayfs (CLI frontend for kento-core)"
requires-python = ">=3.11"
license = "GPL-3.0-only"
dependencies = ["kento-core==1.6.0+unstable.1"]

[project.scripts]
kento = "kento_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--ignore=tests/integration"
markers = [
    "integration: Tier 1 hook-execution tests (opt in via tests/integration/)",
]
